--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,15 @@
   "author": "Harshavardhan",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "mongodb": "^6.6.1"
+  },
+  "bugs": {
+    "url": "https://github.com/harshavardhanck123/Node/issues"
+  },
+  "homepage": "https://github.com/harshavardhanck123/Node#readme",
+  "keywords": [],
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
