--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
   "author": "Harshavardhan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.6.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.6.1",
+    "mongoose": "^8.4.0",
+    "morgan": "^1.10.0"
   },
   "bugs": {
     "url": "https://github.com/harshavardhanck123/Node/issues"
